Fix mockk errors that caused HttpResponseParserUnitTest to fail.